# py_win_x86_64_gcc

./: .gitignore  README.md  pyproject.toml
py_win_x86_64_gcc/: __init__.py  main.py
